--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://dev.addysgop.co.uk/hanesbame",
   "private": true,
   "dependencies": {
+ 
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
