--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hanesbame",
+  "name": "ourwelshhistory",
   "version": "0.1.0",
-  "homepage": "https://dev.addysgop.co.uk/hanesbame",
+  "homepage": "https://ourwelshhistory.cymru",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
